made respnsive for <400px

--- a/Final/index.html
+++ b/Final/index.html
@@ -8,6 +8,15 @@
     <title>Portfolio</title>
 </head>
 <body>
+    <div class="content">
+        <div class="intro">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem sunt quaerat repudiandae aut a facere obcaecati impedit exercitationem quis et.</p>
+    
+        </div>
+        <div class="outro">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi aliquid deserunt itaque eaque dicta nam deleniti, consequatur illum autem non voluptates cum ipsam commodi tempora sint, ab magni velit dolor?</p>
+        </div>
+    </div>
     
 </body>
 </html>
