need to add hamburger

--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -8,17 +8,23 @@
     <link rel="stylesheet" href="contact.css">
 </head>
 <body>
-    <div id="contact">
-        <h3>Contact me</h3>
-        <form>
-            <label for="input">Your Email:</label>
-            <input type="text" id="input" name="email">
-            <br>
-            <label>Message:</label>
-            <input type="text" id="msg" name="input">
-            <br>
-            <input type="submit" value="Submit">
-        </form>
+    <div id="wrapper">
+        <div id="contact">
+            <div>
+                <h3>Contact me :</h3>
+            <form>
+                <label for="input">Your Email:</label>
+                <input type="text" id="input" name="email">
+                <br>
+                <label>Message:</label>
+                <input type="text" name="input" id="msg">
+                <br>
+                <input type="submit" value="Submit" id="submit">
+            </form>
+            </div>
+            
+        </div>
     </div>
+    
 </body>
 </html>
