added some func to TODoList

--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -7,6 +7,8 @@
     <title>Javascript</title>
 </head>
 <body>
+    <h1 id="head">Hello world!</h1>
+    <button type="button" id="btn">Edit</button> 
     <script src="script.js"></script>
 </body>
 </html>
