styled To-Do List a bit more

--- a/To-do_List/index.html
+++ b/To-do_List/index.html
@@ -49,7 +49,7 @@
                     <tr>
                         <th>Task</th>
                         <th>Description</th>
-                        <th>Tick if Completed</th>
+                        <th>Mark as Completed</th>
                     </tr>
                     <!-- just add a single tr and 4 td s for user data -->
 
