--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" class="css">
     <title>Calculator</title>
+    <link rel="icon" type="image/x-icon" href="cal.ico">
+    <script src="script.js"></script>
 </head>
 <body>
     <div class="wrapper">
@@ -21,19 +23,19 @@
                 <div class="button">1/x</div>
                 <div class="button">x<sup>2</sup></div>
                 <div class="button">sqrt</div>
-                <div class="button">/</div>
-                <div class="button">7</div>
-                <div class="button">8</div>
-                <div class="button">9</div>
-                <div class="button">x</div>
-                <div class="button">4</div>
-                <div class="button">5</div>
-                <div class="button">6</div>
-                <div class="button">-</div>
-                <div class="button">1</div>
-                <div class="button">2</div>
-                <div class="button">3</div>
-                <div class="button">+</div>
+                <div class="button" id="buttonDiv">/</div>
+                <div class="button" id="button7">7</div>
+                <div class="button" id="button8">8</div>
+                <div class="button" id="button9">9</div>
+                <div class="button" id="buttonMul">x</div>
+                <div class="button" id="button4">4</div>
+                <div class="button" id="button5">5</div>
+                <div class="button" id="button6">6</div>
+                <div class="button" id="buttonSub">-</div>
+                <div class="button" id="button1">1</div>
+                <div class="button" id="button2">2</div>
+                <div class="button" id="button3">3</div>
+                <div class="button" id="buttonAdd">+</div>
                 <div class="button">+/-</div>
                 <div class="button">0</div>
                 <div class="button">.</div>
