--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -13,16 +13,16 @@
     <div class="wrapper">
         <div class="calc">
             <div class="display">
-                This is display
+                
             </div>
             <div class="buttons">
                 <div class="button">%</div>
-                <div class="button">CE</div>
-                <div class="button">C</div>
-                <div class="button"><</div>
-                <div class="button">1/x</div>
-                <div class="button">x<sup>2</sup></div>
-                <div class="button">sqrt</div>
+                <div class="button" id="clearEntry">CE</div>
+                <div class="button" id="clear">C</div>
+                <div class="button" id="backspace"><</div>
+                <div class="button" id="inverse">1/x</div>
+                <div class="button" id="square">x<sup>2</sup></div>
+                <div class="button" id="sqrt">sqrt</div>
                 <div class="button" id="buttonDiv">/</div>
                 <div class="button" id="button7">7</div>
                 <div class="button" id="button8">8</div>
@@ -36,9 +36,9 @@
                 <div class="button" id="button2">2</div>
                 <div class="button" id="button3">3</div>
                 <div class="button" id="buttonAdd">+</div>
-                <div class="button">+/-</div>
-                <div class="button">0</div>
-                <div class="button">.</div>
+                <div class="button" id="plusMinus">+/-</div>
+                <div class="button" id="button0">0</div>
+                <div class="button" id="decimal">.</div>
                 <div class="button" id="equals">=</div>
             </div>
         </div>
