--- a/Calculator/Test/index.html
+++ b/Calculator/Test/index.html
@@ -4,10 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" class="css">
+    <title>Calculator</title>
+    <link rel="icon" type="image/x-icon" href="cal.ico">
     <script src="script.js"></script>
 </head>
 <body>
-    
+    <div class="wrapper">
+        <div class="calc">
+            <div class="display">
+                
+            </div>
+            <div class="buttons">
+                <div class="button" id="percentage">%</div>
+                <div class="button" id="clearEntry">CE</div>
+                <div class="button" id="clear">C</div>
+                <div class="button" id="backspace"><</div>
+                <div class="button" id="inverse">1/x</div>
+                <div class="button" id="square">x<sup>2</sup></div>
+                <div class="button" id="sqrt">sqrt</div>
+                <div class="button" id="buttonDiv">/</div>
+                <div class="button" id="button7">7</div>
+                <div class="button" id="button8">8</div>
+                <div class="button" id="button9">9</div>
+                <div class="button" id="buttonMul">x</div>
+                <div class="button" id="button4">4</div>
+                <div class="button" id="button5">5</div>
+                <div class="button" id="button6">6</div>
+                <div class="button" id="buttonSub">-</div>
+                <div class="button" id="button1">1</div>
+                <div class="button" id="button2">2</div>
+                <div class="button" id="button3">3</div>
+                <div class="button" id="buttonAdd">+</div>
+                <div class="button" id="plusMinus">+/-</div>
+                <div class="button" id="button0">0</div>
+                <div class="button" id="decimal">.</div>
+                <div class="button" id="equals">=</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
