--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -16,7 +16,7 @@
                 
             </div>
             <div class="buttons">
-                <div class="button">%</div>
+                <div class="button" id="percentage">%</div>
                 <div class="button" id="clearEntry">CE</div>
                 <div class="button" id="clear">C</div>
                 <div class="button" id="backspace"><</div>
