--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1 id="head">Hello world!</h1>
     <button type="button" id="btn">Edit</button> 
-    <script src="script.js"></script>
+    <script src="Filter.js"></script>
 </body>
 </html>
